Bug fix with text-overflow of the image alt

--- a/frontend/src/styles/components/cart-preview.scss
+++ b/frontend/src/styles/components/cart-preview.scss
@@ -51,6 +51,8 @@
     width: $img-size;
     align-self: center;
     text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     img {
       max-height: $max-height-img;
